--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,36 +2,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Contenedor",
+            "name": "Microsoft cloud sandbox",
             "request": "launch",
             "type": "al",
-            "environmentType": "OnPrem",
-            "server": "http://bcserver",
-            "serverInstance": "BC",
-            "authentication": "UserPassword",
+            "environmentType": "Sandbox",
+            "environmentName": "sandbox",
             "startupObjectId": 22,
             "startupObjectType": "Page",
-            "breakOnError": true,
+            "breakOnError": "All",
             "launchBrowser": true,
             "enableLongRunningSqlStatements": true,
-            "enableSqlInformationDebugger": true,
-            "tenant": "default",
-            "schemaUpdateMode": "ForceSync"
-        },
-        {
-            "name": "DebbugerWebService",
-            "type": "al",
-            "request": "attach",
-            "server": "http://bcserver",
-            "serverInstance": "BC",
-            "authentication": "UserPassword",
-            "breakOnError": true,
-            "breakOnRecordWrite": false,
-            "enableSqlInformationDebugger": true,
-            "enableLongRunningSqlStatements": true,
-            "longRunningSqlStatementsThreshold": 500,
-            "numberOfSqlStatements": 10,
-            "breakOnNext": "WebServiceClient"
+            "enableSqlInformationDebugger": true
         }
     ]
 }
