--- a/app.json
+++ b/app.json
@@ -1,37 +1,36 @@
 {
-    "id": "00000000-0000-0000-0000-000000000000",
-    "publisher": "Mitra Global Services",
-    "name": "",
+    "id": "faf71d50-f3df-40f4-90ce-d91db083a72a",
+    "name": "FuncionesString",
+    "publisher": "Esteve Sanpons",
+    "version": "1.0.0.0",
     "brief": "",
     "description": "",
-    "privacyStatement": "https://www.mitrags.com/",
-    "EULA": "https://www.mitrags.com/",
-    "help": "https://www.mitrags.com/",
-    "url": "https://www.mitrags.com/",
-    "contextSensitiveHelpUrl": "https://www.mitrags.com/",
-    "logo": "./image/logoMitra.png",
+    "privacyStatement": "https://github.com/Esanpons",
+    "EULA": "https://github.com/Esanpons",
+    "help": "https://github.com/Esanpons",
+    "url": "https://github.com/Esanpons",
+    "logo": "",
     "dependencies": [],
     "screenshots": [],
+    "platform": "1.0.0.0",
+    "application": "21.0.0.0",
+    "idRanges": [
+      {
+        "from": 50100,
+        "to": 50149
+      }
+    ],
     "resourceExposurePolicy": {
-        "includeSourceInSymbolFile": false,
-        "allowDebugging": true,
-        "allowDownloadingSource": false
+      "allowDebugging": true,
+      "allowDownloadingSource": false,
+      "includeSourceInSymbolFile": false
     },
     "supportedLocales": [
-        "en-US",
-        "es-ES"
-      ],
-      "features": [
-        "TranslationFile"
-      ],
-    "idRanges": [
-        {
-            "from": 50000,
-            "to": 50000
-        }
-    ],    
-    "version": "1.0.0.0", 
-    "application": "21.0.0.0",
-    "platform": "1.0.0.0",
-    "runtime": "9.0"
-}
+      "en-US",
+      "es-ES"
+    ],
+    "features": [
+      "TranslationFile"
+    ],
+    "runtime": "10.0"
+  }
