--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "id": "faf71d50-f3df-40f4-90ce-d91db083a72a",
-    "name": "FuncionesString",
+    "name": "Configuracion Asistida",
     "publisher": "Esteve Sanpons",
     "version": "1.0.0.0",
     "brief": "",
